--- a/README
+++ b/README
@@ -1,8 +1,4 @@
-Welcome to your Appcelerator Titanium Mobile Project
-
-This is a blank project.  Start by editing your application's app.js to 
-make your first mobile project using Titanium.
-
+Check out Alloy here - https://github.com/appcelerator/alloy
 
 
 ----------------------------------
