--- a/README
+++ b/README
@@ -1,14 +1,6 @@
+This is a sample application for Appcelerator Alloy app to fake a navigation group & experiment opening multiple 
+windows and modal window.
+
+
 Check out Alloy here - https://github.com/appcelerator/alloy
-
-
-----------------------------------
-Stuff our legal folk make us say:
-
-Appcelerator, Appcelerator Titanium and associated marks and logos are 
-trademarks of Appcelerator, Inc. 
-
-Titanium is Copyright (c) 2008-2012 by Appcelerator, Inc. All Rights Reserved.
-
-Titanium is licensed under the Apache Public License (Version 2). Please
-see the LICENSE file for the full license.
 
